# morfSensor

./: CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE  README.fr.md  README.md  ROADMAP.md  service.json
config/: morfsensor.example.json
docs/en/: README.md
docs/fr/: ARCHITECTURE.md  CABLAGE.md  INTEGRATION.md  PROTOCOL.md  README.md
examples/minimal/: CMakeLists.txt  main.cpp
include/morfsensor/: HttpServer.h  ISensor.h  Ld2410Sensor.h  MockSensor.h  ModuleFactory.h  ModuleRegistry.h  SensorConfig.h  SensorFactory.h  SensorHttpServer.h  SensorReading.h  SensorRegistry.h  SensorService.h  Service.h  ServiceConfig.h  Version.h
scripts/: sync-morf.ps1  sync-morf.sh
scripts/linux/: install-service.sh  morfsensor.service  update-service.sh
service/: CMakeLists.txt  main.cpp
src/: HttpServer.cpp  Ld2410Sensor.cpp  MockSensor.cpp  ModuleFactory.cpp  ModuleRegistry.cpp  SensorFactory.cpp  SensorHttpServer.cpp  SensorRegistry.cpp  SensorService.cpp  Service.cpp
